all new src docs

--- a/src/aim4-shape-sensitivity/ss_src/4_results.tex
+++ b/src/aim4-shape-sensitivity/ss_src/4_results.tex
@@ -1,4 +1,4 @@
-\subsection{Results}
+\section{Results}
 The humeral implant exhibited the lowest mean $\mathbb{S}(\delta_{y})$ across all implant types (\cref{fig:hum_sensitivity_plot}) (\cref{tab:ss-vals}).
 This rotation represents the final rotation in our Euler rotation sequence (Z-X-Y) and captures the internal/external rotation of the humeral implant.
 Additionally, the surface plotted by the humeral shape sensitivity for all $\delta_{x,y,z}$ is much smoother than any of the other plots, demonstrating the relative lack of shape difference for a wide range of input orientations.
