--- a/src/aim4-shape-sensitivity/ss_src/1_abstract.tex
+++ b/src/aim4-shape-sensitivity/ss_src/1_abstract.tex
@@ -1,9 +1,9 @@
 \begin{abstract}
-	Recent advancements in computer vision and machine learning have facilitated fully autonomous kinematics measurement of Total Knee Arthroplasty (TKA) implant components.
-	However, such performance has yet to be effectively replicated for Reverse Total Shoulder Arthroplasty (rTSA) implants. This study examines the correlation between 3D implant orientation and the sensitivity of their 2D projections, employing the Invariant Angular Radial Transform Descriptor (IARTD).
+	Recent advancements in computer vision and machine learning have facilitated fully autonomous kinematics measurement of Total Knee Arthroplasty (TKA) implant components from single-plane fluoroscopic images.
+	However, such performance has yet to be effectively replicated for Reverse Total Shoulder Arthroplasty (rTSA) implants. This study examines the correlation between 3D implant orientation and the shape sensitivity of their 2D projections, employing the Invariant Angular Radial Transform Descriptor (IARTD).
 	It was observed that minor rotational differences along near-symmetric dimensions, such as the humeral internal-external rotation and the tibial internal/external axis, resulted in negligible shape alterations.
-	Moreover, axes that posed challenges in registration were associated with reduced sensitivity of the descriptor.
-	The findings indicate that symmetrical geometries and orientations inherently limit the amount of silhouette information that can be extracted.
+	Moreover, axes that posed challenges in registration were associated with reduced sensitivity of the shape descriptor.
+	The findings indicate that symmetrical geometries and orientations inherently limit the amount of pose information that can be extracted from a single-projection silhouette..
 	Nevertheless, the inclusion of bony anatomical landmarks as optimization constraints emerges as a promising approach to mitigate ambiguity and enhance registration accuracy.
 \end{abstract}
 
